--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,129 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+.App {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+.nav__container {
+    width: 100%;
+  max-width: 1300px;
+  padding: 0, 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  
 
+}
+
+nav {height: 80px;
+display: flex;
+box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+background-color: white;
+position: relative;
+}
+li {
+   list-style-type: none;
+   
+}
+
+ul {
+   display: flex;
+}
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+  }
+  .nav__link {
+    text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 8px;
+  color: black;
+  
+  }
+  .nav__list {
+    margin-left: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .Landing__title {
+    font-size: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    margin-top: 100px;
+  }
+  .Search__bar {
+    width: 30%;
+    display: flex;
+    margin-top: 50px;
+    border-radius: 9999px;
+    height: 30px;
+   border-color: lightgray;
+   text-align: center;
+
+   
+
+  }
+  .movie__row {
+    flex-wrap: wrap;
+    display: flex;
+  }
+  .movie__container {
+    width: 100%;
+    max-width: 1200px;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  .movie {
+    width: calc(100%/3);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.movie__image {
+    width: 400px;
+    height: 300px;
+    padding:10px;
+}
+
+h1 {
+    
+    font-size: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+}
+.search {
+    margin-top: 30px;
+    border-radius: 9999px;
+    height: 50px;
+    width: 200px;
+    display: flex;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    align-items: center;
+    border: none;
+    justify-content: center;
+}
+.icon {
+display: flex;
+color: black;
+}
