--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
   
 .nav__container {
     width: 100%;
-  max-width: 1300px;
   padding: 0, 24px;
   display: flex;
   justify-content: space-between;
@@ -29,6 +28,7 @@ box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
 background-color: white;
 position: relative;
 }
+
 li {
    list-style-type: none;
    
@@ -126,4 +126,15 @@ h1 {
 .icon {
 display: flex;
 color: black;
+}
+.lightdark__mode {
+  display: flex;
+  background-color: #fff;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  margin-left: 16px;
+  width: 50%;
+
 }
