--- a/src/index.css
+++ b/src/index.css
@@ -165,12 +165,15 @@ color: black;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  color: white;
+  padding: 5px;
 }
 .movie__title{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  color: white;
 }
 a {
   text-decoration: none;
@@ -197,4 +200,9 @@ button {
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
+}
+.movie__year {
+  display: flex;
+  margin-top: 5px;
+  padding-top: 5px;
 }
