--- a/src/index.css
+++ b/src/index.css
@@ -205,4 +205,13 @@ button {
   display: flex;
   margin-top: 5px;
   padding-top: 5px;
+  color: white;
+}
+p  {color: white;}
+.details__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px 5px 5px 5px;
 }
