--- a/src/index.css
+++ b/src/index.css
@@ -303,3 +303,25 @@ body.dark-mode {
 .final__h1 {
   font-size:36px;
 }
+@media (max-width: 576px) {
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .Landing__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+  }
+  .final__h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    width: 80%;
+    
+  }
+}
